--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 04 14:34:18 IST 2023
-sdk.dir=C\:\\Users\\DanaB\\AppData\\Local\\Android\\Sdk
+#Sat Mar 11 15:25:48 IST 2023
+sdk.dir=C\:\\Users\\Nikole\\AppData\\Local\\Android\\Sdk
