--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 17 18:13:11 IST 2023
-sdk.dir=C\:\\Users\\Nikole\\AppData\\Local\\Android\\Sdk
+#Mon Mar 20 20:11:41 IST 2023
+sdk.dir=C\:\\Users\\DanaB\\AppData\\Local\\Android\\Sdk
